Refactor project details and translations for DayFlow and RAID projects
- Updated HTML files for 'projekt-makenow.html' and 'projekt-raid.html' to include data-i18n attributes for localization.
- Enhanced JavaScript translations in 'script.js' for improved internationalization support, including new keys for project descriptions and features.
- Improved structure and readability of translation keys for both projects.

--- a/_header.html
+++ b/_header.html
@@ -19,8 +19,8 @@
     </ul>
 
     <div class="nav-controls">
-      <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten">Dark Mode</button>
-      <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln">English</button>
+      <button id="darkModeToggle" class="toggle-btn" aria-label="Dark Mode umschalten" data-i18n="darkModeLight">Dark Mode</button>
+      <button id="languageToggle" class="toggle-btn" aria-label="Sprache wechseln" data-i18n="languageDE">English</button>
     </div>
   </nav>
 
@@ -28,7 +28,7 @@
 
   <div id="mobileMenu" class="mobile-menu" role="dialog" aria-modal="true" aria-label="Mobile Navigation">
     <button id="mobileMenuClose" class="mobile-menu-close" aria-label="Menü schließen" role="button" tabindex="0">
-      <span class="visually-hidden">Schließen</span>
+      <span class="visually-hidden" data-i18n="mobileMenuClose">Schließen</span>
     </button>
 
     <ul class="mobile-menu-links">
@@ -39,8 +39,8 @@
     </ul>
 
     <div class="mobile-controls">
-      <button id="mobileDarkToggle" class="toggle-btn" aria-label="Dark Mode umschalten">Dark Mode</button>
-      <button id="mobileLangToggle" class="toggle-btn" aria-label="Sprache wechseln">English</button>
+      <button id="mobileDarkToggle" class="toggle-btn" aria-label="Dark Mode umschalten" data-i18n="darkModeLight">Dark Mode</button>
+      <button id="mobileLangToggle" class="toggle-btn" aria-label="Sprache wechseln" data-i18n="languageDE">English</button>
     </div>
   </div>
 </header>
