--- a/cv.html
+++ b/cv.html
@@ -26,17 +26,19 @@
         <h2 data-i18n="cvEducationTitle">Schulischer Werdegang</h2>
         <div class="cv-item">
           <div class="cv-item-header">
-            <h3>Bachelor of Science - Angewandte Informatik</h3>
-            <span class="cv-date">02/2026</span>
+            <h3 data-i18n="cvEducationDegree">Bachelor of Science - Angewandte Informatik</h3>
+            <span class="cv-date" data-i18n="cvEducationDateBachelor">02/2026</span>
           </div>
-          <p class="cv-institution">HTWG Konstanz</p>
+          <p class="cv-institution" data-i18n="cvEducationSchool">HTWG Konstanz</p>
         </div>
         <div class="cv-item">
           <div class="cv-item-header">
-            <h3>Fachhochschulreife</h3>
-            <span class="cv-date">2019</span>
+          <h3 data-i18n="cvEduFhrTitle">Fachhochschulreife</h3>
+            <span class="cv-date" data-i18n="cvEduFhrDate">2019</span>
           </div>
-          <p class="cv-institution">Karl-Maybach-Gymnasium, Friedrichshafen</p>
+          <p class="cv-institution" data-i18n="cvEduFhrSchool">
+            Karl-Maybach-Gymnasium, Friedrichshafen
+          </p>
         </div>
       </section>
 
@@ -46,74 +48,74 @@
 
         <div class="cv-item">
           <div class="cv-item-header">
-            <h3>Werkstudent</h3>
-            <span class="cv-date">03/2023 - 02/2024</span>
+            <h3 data-i18n="cvExpWerkstudent">Werkstudent</h3>
+            <span class="cv-date" data-i18n="cvExpWerkstudentDate">03/2023 - 02/2024</span>
           </div>
-          <p class="cv-institution">Hyperstone GmbH, Konstanz</p>
+          <p class="cv-institution" data-i18n="cvExpWerkstudentCompany">Hyperstone GmbH, Konstanz</p>
           <ul class="cv-highlights">
-            <li>RAID-Simulation und Konzeptüberarbeitung</li>
-            <li>Simulation der Firmware</li>
-            <li>Implementierung verschiedener RAID-Konfigurationen zum Leistungstest</li>
+            <li data-i18n="cvExpWerkstudentTask1">RAID-Simulation und Konzeptüberarbeitung</li>
+            <li data-i18n="cvExpWerkstudentTask2">Simulation der Firmware</li>
+            <li data-i18n="cvExpWerkstudentTask3">Implementierung verschiedener RAID-Konfigurationen zum Leistungstest</li>
           </ul>
         </div>
 
         <div class="cv-item">
           <div class="cv-item-header">
-            <h3>Praktikum</h3>
-            <span class="cv-date">09/2022 - 02/2023</span>
+            <h3 data-i18n="cvExpPraktikum">Praktikum</h3>
+            <span class="cv-date" data-i18n="cvExpPraktikumDate">09/2022 - 02/2023</span>
           </div>
-          <p class="cv-institution">Hyperstone GmbH, Konstanz</p>
+          <p class="cv-institution" data-i18n="cvExpPraktikumCompany">Hyperstone GmbH, Konstanz</p>
         </div>
       </section>
 
       <!-- Skills -->
       <section class="cv-section">
-        <h2>Kenntnisse</h2>
+        <h2 data-i18n="cvSkillsTitle">Kenntnisse</h2>
 
         <div class="cv-skills-category">
-          <h4>Programmiersprachen</h4>
+          <h4 data-i18n="cvSkillCatProgrammingLanguages">Programmiersprachen</h4>
           <div class="badges">
-            <span class="badge">Python</span>
-            <span class="badge">C++</span>
-            <span class="badge">C</span>
-            <span class="badge">Java</span>
-            <span class="badge">Scala</span>
+            <span class="badge" data-i18n="cvSkillPython">Python</span>
+            <span class="badge" data-i18n="cvSkillCpp">C++</span>
+            <span class="badge" data-i18n="cvSkillC">C</span>
+            <span class="badge" data-i18n="cvSkillJava">Java</span>
+            <span class="badge" data-i18n="cvSkillScala">Scala</span>
           </div>
         </div>
 
         <div class="cv-skills-category">
-          <h4>Softwareentwicklung</h4>
+          <h4 data-i18n="cvSkillCatSoftwareDev">Softwareentwicklung</h4>
           <div class="badges">
-            <span class="badge">Git Versionierung</span>
-            <span class="badge">Agiles Arbeiten</span>
+            <span class="badge" data-i18n="cvSkillGitVersioning">Git Versionierung</span>
+            <span class="badge" data-i18n="cvSkillAgile">Agiles Arbeiten</span>
           </div>
         </div>
 
         <div class="cv-skills-category">
-          <h4>Embedded Systems</h4>
+          <h4 data-i18n="cvSkillCatEmbeddedSystems">Embedded Systems</h4>
           <div class="badges">
-            <span class="badge">Kommunikationstechnik</span>
-            <span class="badge">Ubiquitous Computing</span>
-            <span class="badge">Digitale Systeme</span>
+            <span class="badge" data-i18n="cvSkillCommunicationTech">Kommunikationstechnik</span>
+            <span class="badge" data-i18n="cvSkillUbiquitousComputing">Ubiquitous Computing</span>
+            <span class="badge" data-i18n="cvSkillDigitalSystems">Digitale Systeme</span>
           </div>
         </div>
       </section>
 
       <!-- Sprachen -->
       <section class="cv-section">
-        <h2>Sprachkenntnisse</h2>
+        <h2 data-i18n="cvLanguagesTitle">Sprachkenntnisse</h2>
         <div class="cv-languages">
           <div class="cv-language">
-            <span>Deutsch</span>
+            <span data-i18n="cvLangGerman">Deutsch</span>
           </div>
           <div class="cv-language">
-            <span>Englisch</span>
+            <span data-i18n="cvLangEnglish">Englisch</span>
           </div>
           <div class="cv-language">
-            <span>Französisch</span>
+            <span data-i18n="cvLangFrench">Französisch</span>
           </div>
           <div class="cv-language">
-            <span>Spanisch</span>
+            <span data-i18n="cvLangSpanish">Spanisch</span>
           </div>
         </div>
       </section>
