--- a/impressum.html
+++ b/impressum.html
@@ -18,14 +18,14 @@
     <div class="legal-page">
       <h1 data-i18n="impressumTitle">Impressum</h1>
 
-      <h2>Angaben gemäß § 5 TMG</h2>
+      <h2 data-i18n="impressumTMGTitle">Angaben gemäß § 5 TMG</h2>
       <p>
         Marcel Richter<br>
         <span data-i18n="impressumAddressPlaceholder">[Adresse Platzhalter]</span><br>
         <span data-i18n="impressumCityPlaceholder">[PLZ Ort Platzhalter]</span>
       </p>
 
-      <h2>Kontakt</h2>
+      <h2 data-i18n="impressumContactTitle">Kontakt</h2>
       <p>
         <span data-i18n="contactEmail">E-Mail</span>:
         <a href="mailto:marcel.richter.fn@gmx.de">marcel.richter.fn@gmx.de</a><br>
