--- a/kontakt.html
+++ b/kontakt.html
@@ -42,7 +42,7 @@
 
         <!-- Honeypot gegen Spam -->
         <div style="position: absolute; left: -5000px;" aria-hidden="true">
-          <label for="website">Website</label>
+          <label for="website" data-i18n="contactHoneypotLabel">Website</label>
           <input type="text" id="website" name="_honey" tabindex="-1" autocomplete="off">
         </div>
 
@@ -107,6 +107,7 @@
           class="success-message"
           style="display: none;"
           aria-live="polite"
+          data-i18n="contactSuccessMessage"
         >
           Nachricht wurde gesendet. Weiterleitung läuft...
         </div>
