--- a/projekt-raid.html
+++ b/projekt-raid.html
@@ -26,7 +26,7 @@
       <!-- Ziel -->
       <section class="project-section">
         <h2 data-i18n="projectGoalTitle">Ziel</h2>
-        <p>Entwicklung einer Firmware-Simulation zur Durchführung von Performance Tests und Benchmarks für verschiedene RAID-Konfigurationen. Das Projekt sollte es ermöglichen, die Auswirkungen unterschiedlicher RAID-Setups auf die Performance zu verstehen und zu quantifizieren.</p>
+        <p data-i18n="projectRaidGoal">Entwicklung einer Firmware-Simulation zur Durchführung von Performance Tests und Benchmarks für verschiedene RAID-Konfigurationen. Das Projekt sollte es ermöglichen, die Auswirkungen unterschiedlicher RAID-Setups auf die Performance zu verstehen und zu quantifizieren.</p>
       </section>
 
       <!-- Mein Beitrag -->
@@ -35,8 +35,8 @@
         <ul>
           <li data-i18n="projectRaidFeature1">Simulation der Firmware, strukturierte Auswertung von Testergebnissen</li>
           <li data-i18n="projectRaidFeature2">Implementierung verschiedener RAID Konfigurationen für Leistungstests</li>
-          <li>Automatisierung von Test-Szenarien und Datensammlung</li>
-          <li>Dokumentation der Ergebnisse und Performance-Analysen</li>
+          <li data-i18n="projectRaidFeature3">Automatisierung von Test-Szenarien und Datensammlung</li>
+          <li data-i18n="projectRaidFeature4">Dokumentation der Ergebnisse und Performance-Analysen</li>
         </ul>
       </section>
 
@@ -55,16 +55,16 @@
       <!-- Umsetzung -->
       <section class="project-section">
         <h2 data-i18n="projectImplementationTitle">Umsetzung</h2>
-        <p>Die Implementierung begann mit der Analyse der verschiedenen RAID-Level und deren Charakteristiken. Es wurde eine Simulationsumgebung aufgebaut, die es ermöglichte, realistische Szenarien zu testen. Anschließend wurden automatisierte Test-Läufe für verschiedene Konfigurationen durchgeführt und die Performance-Metriken systematisch erfasst. Die Ergebnisse wurden dokumentiert und analysiert, um Optimierungsmöglichkeiten zu identifizieren.</p>
+        <p data-i18n="projectRaidImplementation">Die Implementierung begann mit der Analyse der verschiedenen RAID-Level und deren Charakteristiken. Es wurde eine Simulationsumgebung aufgebaut, die es ermöglichte, realistische Szenarien zu testen. Anschließend wurden automatisierte Test-Läufe für verschiedene Konfigurationen durchgeführt und die Performance-Metriken systematisch erfasst. Die Ergebnisse wurden dokumentiert und analysiert, um Optimierungsmöglichkeiten zu identifizieren.</p>
       </section>
 
       <!-- Lessons Learned -->
       <section class="project-section">
         <h2 data-i18n="projectLessonsTitle">Lessons Learned</h2>
         <ul>
-          <li>Performance-Tests erfordern sorgfältige Planung und Kontrolle von Variablen.</li>
-          <li>Automatisierung ist essentiell für reproduzierbare und zuverlässige Ergebnisse.</li>
-          <li>Gute Dokumentation der Test-Ergebnisse ist für die Nachvollziehbarkeit wichtig.</li>
+          <li data-i18n="projectRaidLesson1">Performance-Tests erfordern sorgfältige Planung und Kontrolle von Variablen.</li>
+          <li data-i18n="projectRaidLesson2">Automatisierung ist essentiell für reproduzierbare und zuverlässige Ergebnisse.</li>
+          <li data-i18n="projectRaidLesson3">Gute Dokumentation der Test-Ergebnisse ist für die Nachvollziehbarkeit wichtig.</li>
         </ul>
       </section>
 
