Enhance skill badges with i18n attributes and update translations in script.js for additional skills

--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
     <section id="skills" data-aos="fade-up">
       <h2 data-i18n="skillsTitle">Skills & Tools</h2>
       <div class="badges">
-        <span class="badge">C</span>
-        <span class="badge">C++</span>
-        <span class="badge">Python</span>
-        <span class="badge">Java</span>
-        <span class="badge">Scala</span>
-        <span class="badge">VHDL (Grundlagen)</span>
-        <span class="badge">Embedded Linux (Grundlagen)</span>
-        <span class="badge">Git</span>
-        <span class="badge">VS Code</span>
-        <span class="badge">Debugging</span>
-        <span class="badge">Agiles Arbeiten</span>
-        <span class="badge">Kommunikationstechnik</span>
+        <span class="badge" data-i18n="cvSkillC">C</span>
+        <span class="badge" data-i18n="cvSkillCpp">C++</span>
+        <span class="badge" data-i18n="cvSkillPython">Python</span>
+        <span class="badge" data-i18n="cvSkillJava">Java</span>
+        <span class="badge" data-i18n="cvSkillScala">Scala</span>
+        <span class="badge" data-i18n="cvSkillVhdlBasics">VHDL (Grundlagen)</span>
+        <span class="badge" data-i18n="cvSkillEmbeddedLinuxBasics">Embedded Linux (Grundlagen)</span>
+        <span class="badge" data-i18n="cvSkillGit">Git</span>
+        <span class="badge" data-i18n="cvSkillVSCode">VS Code</span>
+        <span class="badge" data-i18n="cvSkillDebugging">Debugging</span>
+        <span class="badge" data-i18n="cvSkillAgile">Agiles Arbeiten</span>
+        <span class="badge" data-i18n="cvSkillCommunicationTech">Kommunikationstechnik</span>
       </div>
       <p class="hint" data-i18n="skillsHint">
         Hinweis: Ich liste hier nur Dinge, die ich praktisch genutzt habe. Tiefe und Details zeige ich in den Projekten.
