Update project link in index.html and refine translation for education qualification in script.js

--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
 
         <article class="project-card">
           <h3>
-            <a href="projekt-makenow.html" target="_blank" rel="noopener" data-i18n="projectMakeNowTitle">
-              DayFlow. AI Day Planner
-            </a>
+            <a href="projekt-makenow.html" data-i18n="projectMakeNowTitle">DayFlow. AI Day Planner</a>
           </h3>
           <p class="project-summary" data-i18n="projectMakeNowSummary">
             DayFlow ist ein KI gestützter Tagesplaner, der freie Notizen aus der Inbox in strukturierte Aufgaben und realistische Tagespläne überführt. Der Nutzer bestätigt alle Vorschläge, danach erstellt die App einen Fokus Plan mit einer Hauptaufgabe plus zwei kleinen Aufgaben.
