now everything finished i guess

--- a/projekt-makenow.html
+++ b/projekt-makenow.html
@@ -48,10 +48,10 @@
       <section class="project-section">
         <h2 data-i18n="projectContributionTitle">Mein Beitrag</h2>
         <ul>
-          <li><strong>AI-Integration</strong> - Groq API für intelligente Task-Extraktion und Duration-Estimation. Review und Bestätigung bleibt beim Nutzer</li>
-          <li><strong>Monorepo Architektur</strong> - Monorepo mit Core Package für Business-Logic, Scheduling Engine und Validierung. Tests mit Vitest</li>
-          <li><strong>Security & Cloud</strong> - Firebase Auth, Firestore für Real-time Sync, Security Headers, CSP und Firestore Rules</li>
-          <li><strong>Frontend</strong> - React + TypeScript Screens für Inbox, Today Planning und Daily Review</li>
+          <li data-i18n="projectMakeNowContrib1"><strong>AI-Integration</strong> - Groq API für intelligente Task-Extraktion und Duration-Estimation. Review und Bestätigung bleibt beim Nutzer</li>
+          <li data-i18n="projectMakeNowContrib2"><strong>Monorepo Architektur</strong> - Monorepo mit Core Package für Business-Logic, Scheduling Engine und Validierung. Tests mit Vitest</li>
+          <li data-i18n="projectMakeNowContrib3"><strong>Security & Cloud</strong> - Firebase Auth, Firestore für Real-time Sync, Security Headers, CSP und Firestore Rules</li>
+          <li data-i18n="projectMakeNowContrib4"><strong>Frontend</strong> - React + TypeScript Screens für Inbox, Today Planning und Daily Review</li>
         </ul>
       </section>
 
